--- a/10. Mongoose/Project/package.json
+++ b/10. Mongoose/Project/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mysql2": "^1.6.4"
+    "mongodb": "^3.1.9",
+    "mongoose": "^5.3.12",
+    "mysql2": "^1.6.4",
+    "sequelize": "^4.41.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
